# Rust-Lambda-Logging-Monitoring

./: Cargo.toml  README.md  input.json  output.txt  template.yaml
src/: main.rs
