[package]
name = "bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"
lambda_runtime = "0.3.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
env_logger = "0.9.0"
